# CTFd-Scrapper

./: .gitignore  EXAMPLES.md  README.md  ctfdscraper.py  pyproject.toml
ctfd_scraper/: __init__.py  api_client.py  challenges.py  cli.py  config.py  logger.py  scoreboard.py  teams.py  users.py
docs/: API.md  DEVELOPMENT.md  USAGE.md
tests/: __init__.py  test_api_client.py
