[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctfd-scraper"
version = "1.0.0"
description = "A high-performance tool for backing up CTFd competitions"
authors = [
    {name = "CTFd Scraper Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=7.2.0",
    "mypy>=1.0.0",
]

[project.scripts]
ctfdscraper = "ctfd_scraper.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ctfd-scraper"
Repository = "https://github.com/yourusername/ctfd-scraper"
Issues = "https://github.com/yourusername/ctfd-scraper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctfd_scraper*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=ctfd_scraper --cov-report=html --cov-report=term"

